src/css/partials/_single-post.css
.single-post {
    background: #fff;
    margin-bottom: -4rem;
}
.single-post__picture {
  width: 100%;
  height: 60vh;
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  grid-template-rows: repeat(5, 1fr);
}
.single-post__image {
  grid-column: 1/-1;
  grid-row: 1/-1;
  width: 100%;
  height: 60vh;
  object-fit: cover;
}
.single-post__title-container {
  grid-column: 2/5;
  grid-row: 2/5;
  text-shadow: 1px 1px 7px rgba(0, 0, 0, 0.8);
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  color: #fff;
  font-size: 2rem;
}
.single-post__content {
  margin: 0 auto;
  max-width: 700px;
  font-size: 1.4rem;
}

.single-post__content blockquote {
  font-size: 2rem;
}
.single-post__content img,
.yt__video {
  margin: 0 -2rem;
}
.igtv__wrapper {
  background: #000;
  display: flex;
  justify-content: center;
  height: 400px;
  margin: 0 -4rem;
}
.igtv__video {
  max-width: 200px;
  max-height: 400px;
  object-fit: cover;
}

